--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             </div>
             
             <!-- Balance -->
-            <div class="flex items-center gap-1">
+            <div class="flex items-center gap-2">
                 <img src="./assets/coin.png" alt="">
-                <h4 class="text-[#111111] text-opacity-70 text-xl font-medium"><span id="balance">5500 </span>BDT</h4>
+                <h4 class="text-[#111111] text-opacity-70 text-xl font-medium"><span id="balance">5500</span> BDT</h4>
             </div>
         </div>
 
@@ -78,12 +78,12 @@
                 <div class="flex-1"> 
                     <div class="py-[10px] px-4 bg-[#111111] bg-opacity-5 w-32 rounded-lg flex gap-3 items-center">
                         <img src="./assets/coin.png" alt="">
-                        <p class="text-[#111111] text-opacity-70 text-base"><span>0</span> BDT</p>
+                        <p class="text-[#111111] text-opacity-70 text-base"><span id="c1-total-donation">0</span> BDT</p>
                     </div>
                     <h3 class="text-[#111111] font-bold text-3xl mt-4">Donate for Flood at Noakhali, Bangladesh</h3>
                     <p class="text-[#111111] text-opacity-70 font-light text-base mt-4">The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.</p>
-                    <input class="placeholder:text-[#111111] placeholder:text-opacity-40 p-4 w-full border border-[#111111] border-opacity-10 rounded-lg mt-6" type="text" name="" id="" placeholder="Write Donation Amount">
-                    <button id="" class="bg-[#B4F461] py-4 px-8 rounded-lg text-[#111111] font-semibold text-xl w-full mt-4">Donate Now</button>
+                    <input class="placeholder:text-[#111111] placeholder:text-opacity-40 p-4 w-full border border-[#111111] border-opacity-10 rounded-lg mt-6" type="text" name="" id="c1-donation-input" placeholder="Write Donation Amount">
+                    <button id="c1-donation-button" class="bg-[#B4F461] py-4 px-8 rounded-lg text-[#111111] font-semibold text-xl w-full mt-4">Donate Now</button>
                 </div>
 
             </div>
