Worked On Donation Card COntainer Section!

--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
                 <div class="flex-1"> 
                     <div class="py-[10px] px-4 bg-[#111111] bg-opacity-5 w-32 rounded-lg flex gap-3 items-center">
                         <img src="./assets/coin.png" alt="">
-                        <p class="text-[#111111] text-opacity-70 text-base"><span>0</span> BDT</p>
+                        <p class="text-[#111111] text-opacity-70 text-base"><span id="c2-total-donation">0</span> BDT</p>
                     </div>
                     <h3 class="text-[#111111] font-bold text-3xl mt-4">Donate for Flood Relief in Feni,Bangladesh</h3>
                     <p class="text-[#111111] text-opacity-70 font-light text-base mt-4">The recent floods in Feni have devastated local communities, leading to severe disruption and loss. Your generous donation will help provide immediate aid, including food, clean water, and medical supplies, to those affected by this calamity. Together, we can offer crucial support and help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a real difference. Please consider donating today to assist those in urgent need.</p>
-                    <input class="placeholder:text-[#111111] placeholder:text-opacity-40 p-4 w-full border border-[#111111] border-opacity-10 rounded-lg mt-6" type="text" name="" id="" placeholder="Write Donation Amount">
-                    <button id="" class="bg-[#B4F461] py-4 px-8 rounded-lg text-[#111111] font-semibold text-xl w-full mt-4">Donate Now</button>
+                    <input class="placeholder:text-[#111111] placeholder:text-opacity-40 p-4 w-full border border-[#111111] border-opacity-10 rounded-lg mt-6" type="text" name="" id="c2-donation-input" placeholder="Write Donation Amount">
+                    <button id="c2-donation-button" class="bg-[#B4F461] py-4 px-8 rounded-lg text-[#111111] font-semibold text-xl w-full mt-4">Donate Now</button>
                 </div>
             </div>
 
@@ -119,12 +119,12 @@
                 <div class="flex-1"> 
                     <div class="py-[10px] px-4 bg-[#111111] bg-opacity-5 w-32 rounded-lg flex gap-3 items-center">
                         <img src="./assets/coin.png" alt="">
-                        <p class="text-[#111111] text-opacity-70 text-base"><span>0</span> BDT</p>
+                        <p class="text-[#111111] text-opacity-70 text-base"><span id="c3-total-donation">0</span> BDT</p>
                     </div>
                     <h3 class="text-[#111111] font-bold text-3xl mt-4">Aid for Injured in the Quota Movement</h3>
                     <p class="text-[#111111] text-opacity-70 font-light text-base mt-4">The recent Quota movement has resulted in numerous injuries and significant hardship for many individuals. Your support is crucial in providing medical assistance, rehabilitation, and necessary supplies to those affected. By contributing, you help ensure that injured individuals receive the care and support they need during this challenging time. Every donation plays a vital role in alleviating their suffering and aiding in their recovery. Please consider making a donation to support these brave individuals in their time of need.</p>
-                    <input class="placeholder:text-[#111111] placeholder:text-opacity-40 p-4 w-full border border-[#111111] border-opacity-10 rounded-lg mt-6" type="text" name="" id="" placeholder="Write Donation Amount">
-                    <button id="" class="bg-[#B4F461] py-4 px-8 rounded-lg text-[#111111] font-semibold text-xl w-full mt-4">Donate Now</button>
+                    <input class="placeholder:text-[#111111] placeholder:text-opacity-40 p-4 w-full border border-[#111111] border-opacity-10 rounded-lg mt-6" type="text" name="" id="c3-donation-input" placeholder="Write Donation Amount">
+                    <button id="c3-donation-button" class="bg-[#B4F461] py-4 px-8 rounded-lg text-[#111111] font-semibold text-xl w-full mt-4">Donate Now</button>
                 </div>
             </div>
             
