Worked On  History Section!

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <img src="./assets/coin.png" alt="">
                         <p class="text-[#111111] text-opacity-70 text-base"><span id="c1-total-donation">0</span> BDT</p>
                     </div>
-                    <h3 class="text-[#111111] font-bold text-3xl mt-4">Donate for Flood at Noakhali, Bangladesh</h3>
+                    <h3 id="c1-donation-context" class="text-[#111111] font-bold text-3xl mt-4">Donate for Flood at Noakhali, Bangladesh</h3>
                     <p class="text-[#111111] text-opacity-70 font-light text-base mt-4">The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.</p>
                     <input class="placeholder:text-[#111111] placeholder:text-opacity-40 p-4 w-full border border-[#111111] border-opacity-10 rounded-lg mt-6" type="text" name="" id="c1-donation-input" placeholder="Write Donation Amount">
                     <button id="c1-donation-button" class="bg-[#B4F461] py-4 px-8 rounded-lg text-[#111111] font-semibold text-xl w-full mt-4">Donate Now</button>
@@ -117,7 +117,7 @@
                         <img src="./assets/coin.png" alt="">
                         <p class="text-[#111111] text-opacity-70 text-base"><span id="c2-total-donation">600</span> BDT</p>
                     </div>
-                    <h3 class="text-[#111111] font-bold text-3xl mt-4">Donate for Flood Relief in Feni,Bangladesh</h3>
+                    <h3 id="c2-donation-context" class="text-[#111111] font-bold text-3xl mt-4">Donate for Flood Relief in Feni,Bangladesh</h3>
                     <p class="text-[#111111] text-opacity-70 font-light text-base mt-4">The recent floods in Feni have devastated local communities, leading to severe disruption and loss. Your generous donation will help provide immediate aid, including food, clean water, and medical supplies, to those affected by this calamity. Together, we can offer crucial support and help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a real difference. Please consider donating today to assist those in urgent need.</p>
                     <input class="placeholder:text-[#111111] placeholder:text-opacity-40 p-4 w-full border border-[#111111] border-opacity-10 rounded-lg mt-6" type="text" name="" id="c2-donation-input" placeholder="Write Donation Amount">
                     <button id="c2-donation-button" class="bg-[#B4F461] py-4 px-8 rounded-lg text-[#111111] font-semibold text-xl w-full mt-4">Donate Now</button>
@@ -137,7 +137,7 @@
                         <img src="./assets/coin.png" alt="">
                         <p class="text-[#111111] text-opacity-70 text-base"><span id="c3-total-donation">2400</span> BDT</p>
                     </div>
-                    <h3 class="text-[#111111] font-bold text-3xl mt-4">Aid for Injured in the Quota Movement</h3>
+                    <h3 id="c3-donation-context" class="text-[#111111] font-bold text-3xl mt-4">Aid for Injured in the Quota Movement</h3>
                     <p class="text-[#111111] text-opacity-70 font-light text-base mt-4">The recent Quota movement has resulted in numerous injuries and significant hardship for many individuals. Your support is crucial in providing medical assistance, rehabilitation, and necessary supplies to those affected. By contributing, you help ensure that injured individuals receive the care and support they need during this challenging time. Every donation plays a vital role in alleviating their suffering and aiding in their recovery. Please consider making a donation to support these brave individuals in their time of need.</p>
                     <input class="placeholder:text-[#111111] placeholder:text-opacity-40 p-4 w-full border border-[#111111] border-opacity-10 rounded-lg mt-6" type="text" name="" id="c3-donation-input" placeholder="Write Donation Amount">
                     <button id="c3-donation-button" class="bg-[#B4F461] py-4 px-8 rounded-lg text-[#111111] font-semibold text-xl w-full mt-4">Donate Now</button>
@@ -148,7 +148,8 @@
         <!-- Donation Card Ended -->
 
         <!-- History Card Started -->
-        <section></section>
+        <section id="history-container" class="container mx-auto hidden">
+        </section>
         <!-- History Card Ended -->
 
     </main>
