--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,8 @@
     <!-- Header Ended -->
 
     <!-- Main Started -->
-    <main>
+    <main class="container mx-auto">
+        <p class="font-bold text-3xl mb-6 mt-10">Important FAQ</p>
         <div class="join join-vertical w-full">
             <div class="collapse collapse-arrow join-item border-base-300 border">
               <input type="radio" name="my-accordion-4" checked="checked" />
