Checked Code Of A5!

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <!-- Donation Card Ended -->
 
         <!-- History Card Started -->
-        <section id="history-container" class="container mx-auto hidden">
+        <section id="history-container" class="container mx-auto hidden min-h-[470px]">
         </section>
         <!-- History Card Ended -->
 
